very minor tweak to spacing on index page. Fixed text size of saved searches on the left side of search.html.

--- a/austensearch.css
+++ b/austensearch.css
@@ -18,7 +18,7 @@
     text-decoration: none;
     margin-left: 10px;
     line-height: 1.4;
-    font-size: 20;
+    font-size: 20px;
     color: black;
   }
   /* saved searches border */
